wordpress/3.wordpress-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress
  namespace: ttc-team-03
  labels:
    app: wordpress
spec:
  serviceName: wordpress
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: gcr.io/ttc-team-03/wordpress:latest
          name: wordpress
          resources:
            requests:
              memory: 0.5Gi
              cpu: 50m
            limits: 
              memory: 1Gi
              cpu: 200m
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: data
              mountPath: /var/www/html
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: wordpress
      # NOTE: You can increase the storage size
      resources:
        requests:
          storage: 10Gi
